- Adding basic instructions to harden a dockerized production instance